created hero, d-flex

--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
     <title>Homepsge</title>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+
+            <div class="col hero">
     <h1>Tatiana Mytsianka</h1>
     <h3>Front-end Developer from Ukraine</h3>
-    <i class="fa-brands fa-instagram"></i>
+    <p>
+        I'm a software engineer with a passion for building and designing exceptional user experiences. I'm currently looking for a role with a fast-paced, socially-conscious company in the UK, Europe or Ukraine.
+    </p>
+            </div>
+
+        <diw class="row">
+            
+        </diw>
+
+        </div>
+    </div>
+
 </body>
 </html>
