added photo heroes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <title>Homepsge</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
 
-            <div class="col hero">
+    
+    <div class="hero container-fluid ">
+        <div class="row ">
+
+            <div class="col-sm-6">
     <h1>Tatiana Mytsianka</h1>
     <h3>Front-end Developer from Ukraine</h3>
     <p>
@@ -22,8 +24,8 @@
     </p>
             </div>
 
-        <diw class="row">
-            
+        <diw class="col-sm-6">
+            <img src="/img/hero-photo.jpg" alt="My photo" class="img-fluid rounded mx-auto d-block my-photo" width="300px">
         </diw>
 
         </div>
