--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Edu+VIC+WA+NT+Beginner&family=Fredericka+the+Great&family=Fredoka+One&family=Henny+Penny&family=Leckerli+One&family=Monoton&family=Patua+One&family=Roboto+Slab:wght@100&family=Satisfy&family=Splash&family=Ultra&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/040b4c5bc1.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -12,20 +15,37 @@
 </head>
 <body>
 
+    <nav class="navbar navbar-expand-lg  bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand name" href="#">Mytsianka T.</a>
+          <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon "></span>
+          </button>
+          <div class="collapse navbar-collapse navbar-light" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto ">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">About me</a>
+              <a class="nav-link" href="#">Certificate</a>
+              <a class="nav-link" href="#">My works</a>
+              <a class="nav-link" href="#">Contact me</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     
     <div class="hero container-fluid ">
         <div class="row ">
 
-            <div class="col-sm-6">
+            <div class="col-md-6">
     <h1>Tatiana Mytsianka</h1>
-    <h3>Front-end Developer from Ukraine</h3>
-    <p>
+    <h2>Front-end Developer from Ukraine</h2>
+    <p class="introduce m-3">
         I'm a software engineer with a passion for building and designing exceptional user experiences. I'm currently looking for a role with a fast-paced, socially-conscious company in the UK, Europe or Ukraine.
     </p>
             </div>
 
-        <diw class="col-sm-6">
-            <img src="/img/hero-photo.jpg" alt="My photo" class="img-fluid rounded mx-auto d-block my-photo" width="300px">
+        <diw class="col-md-6">
+            <img src="/img/hero-photo.jpg" alt="My photo" class="img-fluid rounded mx-auto d-block img-thumbnail my-photo" width="300px">
         </diw>
 
         </div>
