added button html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="collapse navbar-collapse navbar-light" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto ">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">About me</a>
+              <a class="nav-link success" href="#">About me</a>
               <a class="nav-link" href="#">Certificate</a>
               <a class="nav-link" href="#">My works</a>
               <a class="nav-link" href="#">Contact me</a>
@@ -42,6 +42,7 @@
     <p class="introduce m-3">
         I'm a software engineer with a passion for building and designing exceptional user experiences. I'm currently looking for a role with a fast-paced, socially-conscious company in the UK, Europe or Ukraine.
     </p>
+    <button class="check-out-works"> Check out my works</button>
             </div>
 
         <diw class="col-md-6">
