--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <script src="https://kit.fontawesome.com/040b4c5bc1.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Homepsge</title>
+    <title>Homepage</title>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg  bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand name" href="#">Mytsianka T.</a>
+          <a class="navbar-brand name" href="/index.html">Mytsianka T.</a>
           <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon "></span>
           </button>
           <div class="collapse navbar-collapse navbar-light" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto ">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link success" href="#">About me</a>
-              <a class="nav-link" href="#">Certificate</a>
-              <a class="nav-link" href="#">My works</a>
-              <a class="nav-link" href="#">Contact me</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link success" href="/about.html">About me</a>
+              <a class="nav-link" href="/cetrtificate.html">Certificate</a>
+              <a class="nav-link" href="/works.html">My works</a>
+              <a class="nav-link" href="/contact.html">Contact me</a>
             </div>
           </div>
         </div>
