--- a/about.html
+++ b/about.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Edu+VIC+WA+NT+Beginner&family=Fredericka+the+Great&family=Fredoka+One&family=Henny+Penny&family=Leckerli+One&family=Monoton&family=Patua+One&family=Roboto+Slab:wght@100&family=Satisfy&family=Splash&family=Ultra&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/040b4c5bc1.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="style.css">
     <title>About me</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg  bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand name" href="/index.html">Mytsianka T.</a>
+          <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon "></span>
+          </button>
+          <div class="collapse navbar-collapse navbar-light" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto ">
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link success" href="/about.html">About me</a>
+              <a class="nav-link" href="/cetrtificate.html">Certificate</a>
+              <a class="nav-link" href="/works.html">My works</a>
+              <a class="nav-link" href="/contact.html">Contact me</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     
 </body>
 </html>
