added footer in the other pages

--- a/works.html
+++ b/works.html
@@ -33,5 +33,33 @@
         </div>
       </nav>
     
+
+
+
+
+      <footer >
+        <p class="open-code text-center mt-5">
+          This is an 
+          <a href="https://github.com/tasrad/my-portfolio-pages" target="_blank" class="open-code-link">
+            open-source project 
+          </a>
+          coded by Tatiana Mytsianka
+        </p>
+  
+        <div class="icons d-block text-center">
+          <a href="https://www.instagram.com/tasrad" class="instagram" target="_blank">
+            <i class="fa-brands fa-square-instagram" ></i>
+          </a>
+          <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b/" class="linkedin">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="mailto:mytsianka@gmail.com">
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+          <a href="https://github.com/tasrad" class="git-hub">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
+      </footer>
 </body>
 </html>
