--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     <p class="introduce m-3">
         I'm a software engineer with a passion for building and designing exceptional user experiences. I'm currently looking for a role with a fast-paced, socially-conscious company in the UK, Europe or Ukraine.
     </p>
-    <button class="check-out-works"> Check out my works</button>
+    <button class="check-out-works" href> 
+      <a href="/works.html" class="link-btn">Check out my works</a>
+    </button>
             </div>
 
         <diw class="col-md-6">
