--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <p class="introduce m-3">
         I'm a software engineer with a passion for building and designing exceptional user experiences. I'm currently looking for a role with a fast-paced, socially-conscious company in the UK, Europe or Ukraine.
     </p>
-    <button class="check-out-works" href> 
+    <button class="check-out-works shadow" href> 
       <a href="/works.html" class="link-btn">Check out my works</a>
     </button>
             </div>
 
         <diw class="col-md-6">
-            <img src="/img/hero-photo.jpg" alt="My photo" class="img-fluid rounded mx-auto d-none d-md-block d-lg-block img-thumbnail my-photo" width="300px">
+            <img src="/img/hero-photo.jpg" alt="My photo" class="img-fluid rounded mx-auto d-none d-md-block d-lg-block img-thumbnail my-photo shadow" width="300px">
         </diw>
 
         </div>
