--- a/about.html
+++ b/about.html
@@ -47,13 +47,13 @@
           <a href="https://www.instagram.com/tasrad" class="instagram" target="_blank">
             <i class="fa-brands fa-square-instagram" ></i>
           </a>
-          <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b/" class="linkedin">
+          <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b/" class="linkedin" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
           </a>
-          <a href="mailto:mytsianka@gmail.com">
+          <a href="mailto:mytsianka@gmail.com" class="email" target="_blank">
             <i class="fa-solid fa-envelope"></i>
           </a>
-          <a href="https://github.com/tasrad" class="git-hub">
+          <a href="https://github.com/tasrad" class="git-hub" target="_blank">
             <i class="fa-brands fa-github"></i>
           </a>
         </div>
