--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg  bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand name" href="/index.html">Mytsianka T.</a>
+          <a class="navbar-brand name" href="/index.html" title="Tatiana Frontend Developer">Mytsianka T.</a>
           <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon "></span>
           </button>
