added title to navbar in the all pages

--- a/cetrtificate.html
+++ b/cetrtificate.html
@@ -14,23 +14,23 @@
     <title>My Cetrtificate</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg  bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand name" href="/index.html">Mytsianka T.</a>
-          <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon "></span>
-          </button>
-          <div class="collapse navbar-collapse navbar-light" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto ">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link success" href="/about.html">About me</a>
-              <a class="nav-link" href="/cetrtificate.html">Certificate</a>
-              <a class="nav-link" href="/works.html">My works</a>
-              <a class="nav-link" href="/contact.html">Contact me</a>
-            </div>
-          </div>
+  <nav class="navbar navbar-expand-lg  bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand name" href="/index.html" title="Tatiana Frontend Developer">Mytsianka T.</a>
+      <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon "></span>
+      </button>
+      <div class="collapse navbar-collapse navbar-light" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto ">
+          <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
+          <a class="nav-link success" href="/about.html" title="About Tatiana">About me</a>
+          <a class="nav-link" href="/cetrtificate.html" title="Certifications">Certificate</a>
+          <a class="nav-link" href="/works.html" title="Works by Tatiana Mytsianka">My works</a>
+          <a class="nav-link" href="/contact.html" title="Contact me">Contact me</a>
         </div>
-      </nav>
+      </div>
+    </div>
+  </nav>
 
 
 
