--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
           </button>
           <div class="collapse navbar-collapse navbar-light" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto ">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link success" href="/about.html">About me</a>
-              <a class="nav-link" href="/cetrtificate.html">Certificate</a>
-              <a class="nav-link" href="/works.html">My works</a>
-              <a class="nav-link" href="/contact.html">Contact me</a>
+              <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
+              <a class="nav-link success" href="/about.html" title="About Tatiana">About me</a>
+              <a class="nav-link" href="/cetrtificate.html" title="Certifications">Certificate</a>
+              <a class="nav-link" href="/works.html" title="Works by Tatiana Mytsianka">My works</a>
+              <a class="nav-link" href="/contact.html" title="Contact me">Contact me</a>
             </div>
           </div>
         </div>
