added title to other footers

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <p class="introduce m-3">
         I'm a software engineer with a passion for building and designing exceptional user experiences. I'm currently looking for a role with a fast-paced, socially-conscious company in the UK, Europe or Ukraine.
     </p>
-    <button class="check-out-works shadow" href> 
+    <button class="check-out-works shadow" title="Check out works by Tatiana Mytsianka"> 
       <a href="/works.html" class="link-btn">Check out my works</a>
     </button>
             </div>
 
         <diw class="col-md-6">
-            <img src="/img/hero-photo.jpg" alt="My photo" class="img-fluid rounded mx-auto d-none d-md-block d-lg-block img-thumbnail my-photo shadow" width="300px">
+            <img src="/img/hero-photo.jpg" alt="Photo" class="img-fluid rounded mx-auto d-none d-md-block d-lg-block img-thumbnail my-photo shadow" width="300px" title="Tatiana Mytsianka">
         </diw>
 
         </div>
@@ -57,23 +57,23 @@
     <footer >
       <p class="open-code text-center mt-5">
         This is an 
-        <a href="https://github.com/tasrad/my-portfolio-pages" target="_blank" class="open-code-link">
+        <a href="https://github.com/tasrad/my-portfolio-pages" target="_blank" class="open-code-link" title="Review code by Frontend Developer Tatiana">
           open-source project 
         </a>
         coded by Tatiana Mytsianka
       </p>
 
       <div class="icons d-block text-center">
-        <a href="https://www.instagram.com/tasrad" class="instagram" target="_blank">
+        <a href="https://www.instagram.com/tasrad" class="instagram" target="_blank" title="Link to Instagram">
           <i class="fa-brands fa-square-instagram" ></i>
         </a>
-        <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b/" class="linkedin" target="_blank">
+        <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b/" class="linkedin" target="_blank" title="Link to Linkedin">
           <i class="fa-brands fa-linkedin"></i>
         </a>
-        <a href="mailto:mytsianka@gmail.com" class="email" target="_blank">
+        <a href="mailto:mytsianka@gmail.com" class="email" target="_blank" title="Link to email">
           <i class="fa-solid fa-envelope"></i>
         </a>
-        <a href="https://github.com/tasrad" class="git-hub" target="_blank">
+        <a href="https://github.com/tasrad" class="git-hub" target="_blank" title="Link to GitHub">
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
