--- a/cetrtificate.html
+++ b/cetrtificate.html
@@ -37,30 +37,30 @@
 
 
 
-      <footer >
-        <p class="open-code text-center mt-5">
-          This is an 
-          <a href="https://github.com/tasrad/my-portfolio-pages" target="_blank" class="open-code-link">
-            open-source project 
-          </a>
-          coded by Tatiana Mytsianka
-        </p>
-  
-        <div class="icons d-block text-center">
-          <a href="https://www.instagram.com/tasrad" class="instagram" target="_blank">
-            <i class="fa-brands fa-square-instagram" ></i>
-          </a>
-          <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b/" class="linkedin" target="_blank">
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-          <a href="mailto:mytsianka@gmail.com" class="email" target="_blank">
-            <i class="fa-solid fa-envelope"></i>
-          </a>
-          <a href="https://github.com/tasrad" class="git-hub" target="_blank">
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </div>
-      </footer>
+  <footer >
+    <p class="open-code text-center mt-5">
+      This is an 
+      <a href="https://github.com/tasrad/my-portfolio-pages" target="_blank" class="open-code-link" title="Review code by Frontend Developer Tatiana">
+        open-source project 
+      </a>
+      coded by Tatiana Mytsianka
+    </p>
+
+    <div class="icons d-block text-center">
+      <a href="https://www.instagram.com/tasrad" class="instagram" target="_blank" title="Link to Instagram">
+        <i class="fa-brands fa-square-instagram" ></i>
+      </a>
+      <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b/" class="linkedin" target="_blank" title="Link to Linkedin">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+      <a href="mailto:mytsianka@gmail.com" class="email" target="_blank" title="Link to email">
+        <i class="fa-solid fa-envelope"></i>
+      </a>
+      <a href="https://github.com/tasrad" class="git-hub" target="_blank" title="Link to GitHub">
+        <i class="fa-brands fa-github"></i>
+      </a>
+    </div>
+  </footer>
     
 </body>
 </html>
