changed hover link and btn in the homepage

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="hero container-fluid ">
         <div class="row ">
 
-            <div class="col-md-6">
+            <div class="col-lg-6">
     <h1>Tatiana Mytsianka</h1>
     <h2>Front-end Developer from Ukraine</h2>
     <p class="introduce m-3">
@@ -47,7 +47,7 @@
     </button>
             </div>
 
-        <diw class="col-md-6">
+        <diw class="col-lg-6">
             <img src="/img/hero-photo.jpg" alt="Photo" class="img-fluid rounded mx-auto d-none d-md-block d-lg-block img-thumbnail my-photo shadow" width="300px" title="Tatiana Mytsianka">
         </diw>
 
