added content to about me

--- a/about.html
+++ b/about.html
@@ -33,6 +33,28 @@
       </nav>
 
 
+      <div class="about-me-content">
+        <h2 class="m-5">👋 Hi, I am Tatiana Mytsianka</h2>
+        <h3 class="text-center">Front-end Developer, based in Kyiv, Ukraine </h3>
+        <p class="my-story ">
+          I have worked as a pharmacist since I was 18 years old, I've worked directly with customers.
+Although I love my job, it never really scratched my creative itch. I've always been fascinated with coding and 
+dabbled in it from a young age, so I've recently taken the plunge and formally trained as a front-end developer.
+ Now, I'm looking for the perfect role to kick-start my career!
+ <br>
+ <br>
+I also just really love to code! It's incredibly fulfilling to see something come to life that you've built, 
+and the endless opportunities to solve difficult problems are very appealing to me. I am a quick learner and am 
+looking for an opportunity that allows me to learn something new every day - whether it's languages, ways of working 
+or new technologies.
+<br>
+<br>
+Check out my portfolio showcasing some of my recent work here.
+        </p>
+
+      </div>
+
+
 
       <footer >
         <p class="open-code text-center mt-5">
