created block about tools and technologies

--- a/about.html
+++ b/about.html
@@ -52,7 +52,76 @@ or new technologies.
 Check out my portfolio showcasing some of my recent work here.
         </p>
 
+        <button class="check-out-works shadow" title="View certifications Tatiana Mytsianka"> 
+          <a href="/cetrtificate.html" class="link-btn">View my Certifications</a>
+        </button>
       </div>
+
+      <div class="technologies-and-tools mt-5 mb-5">
+        <h3 class="text-center m-5"> Tools and Technologies</h3>
+        <div class="container-fluid">
+
+          <div class="row m-3">
+            <div class="col-lg-3">
+              <img src="/img/html.png" alt="Icon HTML" title="HTML" class="img-fluid icon">
+              <small class="text-center d-block">HTML </small>
+            </div>
+            <div class="col-lg-3">
+              <img src="/img/js.png" alt="Icon CSS" title="CSS" class="img-fluid icon">
+              <small class="text-center d-block">CSS </small>
+            </div>
+            <div class="col-lg-3">
+              <img src="/img/js.png" alt="Icon Java Script" title="Java Script" class="img-fluid icon">
+              <small class="text-center d-block">Java Script </small>
+            </div>
+            <div class="col-lg-3">
+              <img src="/img/vs-code.png" alt="Icon Editor" title="Editor"class="img-fluid icon">
+              <small class="text-center d-block">Editor </small>
+            </div>
+          </div>
+
+          <div class="row m-3">
+            <div class="col-lg-3 ">
+              <img src="/img/flex-box.png" alt="Icon Flexbox" title="Flexbox" class="img-fluid icon">
+              <small class="text-center d-block">Flexbox </small>
+            </div>
+            <div class="col-lg-3">
+              <img src="/img/git-hub.png" alt="Icon GitHub" title="GitHub" class="img-fluid icon">
+              <small class="text-center d-block">GitHub </small>
+            </div>
+            <div class="col-lg-3">
+              <img src="/img/bootsrtap.png" alt="Icon Bootstrap" title="Bootstrap" class="img-fluid icon">
+              <small class="text-center d-block">Bootstrap </small>
+            </div>
+            <div class="col-lg-3">
+              <img src="/img/seo.png" alt="SEO" title="SEO"class="img-fluid icon">
+              <small class="text-center d-block">SEO </small>
+            </div>
+          </div>
+
+            <div class="row m-3">
+              <div class="col-lg-3 ">
+                <img src="/img/api.png" alt="Icon API" title="API" class="img-fluid icon">
+                <small class="text-center d-block">API </small>
+              </div>
+              <div class="col-lg-3">
+                <img src="/img/hosting.png" alt="Icon Hosting" title="Hosting" class="img-fluid icon">
+                <small class="text-center d-block">Hosting </small>
+              </div>
+              <div class="col-lg-3">
+                <img src="/img/react.png" alt="Icon React" title="React" class="img-fluid icon">
+                <small class="text-center d-block">React </small>
+              </div>
+              <div class="col-lg-3">
+                <img src="/img/responsive.png" alt="Responsive" title="Responsive" class="img-fluid icon">
+                <small class="text-center d-block">Responsive </small>
+              </div>
+            </div>
+         
+          
+        </div>
+      </div>
+
 
 
 
