created cards about my prijects

--- a/works.html
+++ b/works.html
@@ -32,8 +32,145 @@
       </div>
     </div>
   </nav>
+  
+  <h2 class="mt-3">Things I've built recently</h2>
     
+<div class="works">
 
+  <div class="card" style="width: 24rem;">
+    <img src="/img/photo-honey.png" class="card-img-top" alt="Honey Page">
+    <div class="card-body">
+      <h5 class="card-title text-center">Page about Honey</h5>
+      <p class="card-text">My first page about things that I love eat😊</p>
+      <h5 class="card-title text-center"> Built with: </h5>
+      <div>
+       <ul>
+          <li class="skill">
+           HTML
+          </li>
+          <li class="skill">
+            CSS
+           </li>
+           <li class="skill">
+            Java Script
+           </li>
+           <li class="skill">
+            Visual Studio Code
+           </li>
+        </ul>
+        <div class="icons d-block text-center">
+        <h5 class="card-title text-center">Check it out:</h5>
+        <a href="#" class="live-site" target="_blank" title="Link to site">
+          <i class="fa-solid fa-arrow-up-right-from-square"></i>
+        </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card" style="width: 24rem;">
+    <img src="/img/photo-weather-app.png" class="card-img-top" alt="Weather App">
+    <div class="card-body">
+      <h5 class="card-title text-center">Weather Application</h5>
+      <p class="card-text">This was my first project that involved fully-interactive components that pulled data from an API.</p>
+      <h5 class="card-title text-center"> Built with: </h5>
+      <div>
+       <ul>
+          <li class="skill">
+           HTML
+          </li>
+          <li class="skill">
+            CSS
+           </li>
+           <li class="skill">
+            Java Script
+           </li>
+           <li class="skill">
+            Visual Studio Code
+           </li>
+           <li class="skill">
+            API
+           </li>
+           <li class="skill">
+             GitHub
+            </li>
+            <li class="skill">
+             Bootstrap
+            </li>
+            <li class="skill">
+             Hosting
+            </li>
+        </ul>
+        <div class="icons d-block text-center">
+          <h5 class="card-title text-center">Check it out:</h5>
+          <a href="https://graceful-souffle-413359.netlify.app/" class="live-site" target="_blank" title="Link to site">
+            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </a>
+          <a href="https://github.com/tasrad/WeatherApp" class="git-hub" target="_blank" title="Link to GitHub">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card" style="width: 24rem;">
+    <img src="/img/photo-portfolio2.png" class="card-img-top" alt="Portfolio Site">
+    <div class="card-body">
+      <h5 class="card-title text-center">Front-end Developer Portfolio</h5>
+      <p class="card-text">This is my first fully-responsive project built using Bootstrap. This website is fully accessible on both mobile and desktop viewports.
+      </p>
+      <h5 class="card-title text-center"> Built with: </h5>
+      <div>
+       <ul>
+        <li class="skill">
+          HTML
+         </li>
+         <li class="skill">
+           CSS
+          </li>
+          <li class="skill">
+           Java Script
+          </li>
+          <li class="skill">
+           Visual Studio Code
+          </li>
+          <li class="skill">
+           API
+          </li>
+          <li class="skill">
+            GitHub
+           </li>
+           <li class="skill">
+            Bootstrap
+           </li>
+           <li class="skill">
+            Hosting
+           </li>
+          <li class="skill">
+           Flexbox
+          </li>
+          <li class="skill">
+            SEO
+           </li>
+           <li class="skill">
+            Responsive
+           </li>
+        </ul>
+        <div class="icons d-block text-center">
+          <h5 class="card-title text-center">Check it out:</h5>
+          <a href="https://app.netlify.com/sites/idyllic-croissant-9fc32f/overview" class="live-site" target="_blank" title="Link to site">
+            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </a>
+          <a href="https://github.com/tasrad/my-portfolio-pages" class="git-hub" target="_blank" title="Link to GitHub">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          </div>
+      </div>
+    </div>
+  </div>
+
+</div>
 
 
 
