--- a/cetrtificate.html
+++ b/cetrtificate.html
@@ -31,8 +31,19 @@
       </div>
     </div>
   </nav>
+<h2>Certification</h2>
+<p class="introduce m-3 text-center">I started my journey with SheCodes👩‍💻. For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different exercises, and everything is well explained, homework and deadlines are good for keep focus.</p>
 
-
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <img src="/img/certificatBasic.png" alt="Cetrtificate SheCodes Basics" class="img-fluid rounded shadow-lg mt-3">
+    </div>
+    <div class="col-md-6">
+      <img src="/img/certificatePlus.png" alt="Cetrtificate SheCodes Plus" class="img-fluid rounded shadow-lg mt-3">
+    </div>
+  </div>
+</div>
 
 
 
