--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,31 @@
       </div>
     </div>
   </nav>
+ 
+  <h2 class="mt-5"> Let`s get in touch!</h2>
 
+  <p class="introduce m-3 text-center">
+    If you'd like to collaborate on a project or discuss an open role, please reach out to me using one of the below methods.
+  </p>
+  <div class="contact-ways m-5 text-center">
+    <h3>
+      Email: 
+      <br>
+      <a href="mailto:mytsianka@gmail.com" class="contact-link">mytsianka@gmail.com</a>
+    </h3>
+    <br>
+    <h3> 
+      Linkedin:
+      <br>
+      <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b" class="contact-link">Tatiana Mytsianka</a>
+    </h3>
+    <br>
+    <h3>
+      Instagram:
+      <br>
+      <a href="https://www.instagram.com/tasrad/" class="contact-link">@tasrad</a>
+    </h3>
+  </div>
 
 
   <footer >
