added active link

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
       </button>
       <div class="collapse navbar-collapse navbar-light" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto ">
-          <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
-          <a class="nav-link success" href="/about.html" title="About Tatiana">About me</a>
-          <a class="nav-link" href="/cetrtificate.html" title="Certifications">Certifications</a>
+          <a class="nav-link " aria-current="page" href="/index.html" title="Homepage">Home</a>
+          <a class="nav-link " href="/about.html" title="About Tatiana">About me</a>
+          <a class="nav-link active" href="/cetrtificate.html" title="Certifications">Certifications</a>
           <a class="nav-link" href="/works.html" title="Works by Tatiana Mytsianka">My works</a>
           <a class="nav-link" href="/contact.html" title="Contact me">Contact me</a>
         </div>
@@ -47,13 +47,13 @@
     <h3> 
       Linkedin:
       <br>
-      <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b" class="contact-link">Tatiana Mytsianka</a>
+      <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b" class="contact-link" target="_blank">Tatiana Mytsianka</a>
     </h3>
     <br>
     <h3>
       Instagram:
       <br>
-      <a href="https://www.instagram.com/tasrad/" class="contact-link">@tasrad</a>
+      <a href="https://www.instagram.com/tasrad/" class="contact-link" target="_blank">@tasrad</a>
     </h3>
   </div>
 
