--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Frontend Developer and Softwere SEO ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Edu+VIC+WA+NT+Beginner&family=Fredericka+the+Great&family=Fredoka+One&family=Henny+Penny&family=Leckerli+One&family=Monoton&family=Patua+One&family=Roboto+Slab:wght@100&family=Satisfy&family=Splash&family=Ultra&display=swap" rel="stylesheet">
@@ -11,7 +12,7 @@
     <script src="https://kit.fontawesome.com/040b4c5bc1.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Homepage</title>
+    <title>Frontend Developer - Tatiana Mytsianka</title>
 </head>
 <body>
 
@@ -24,7 +25,7 @@
       <div class="collapse navbar-collapse navbar-light" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto ">
           <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage">Home</a>
-          <a class="nav-link success" href="/about.html" title="About Tatiana">About me</a>
+          <a class="nav-link " href="/about.html" title="About Tatiana">About me</a>
           <a class="nav-link" href="/cetrtificate.html" title="Certifications">Certifications</a>
           <a class="nav-link" href="/works.html" title="Works by Tatiana Mytsianka">My works</a>
           <a class="nav-link" href="/contact.html" title="Contact me">Contact me</a>
