--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
         <div class="navbar-nav ms-auto ">
           <a class="nav-link " aria-current="page" href="/index.html" title="Homepage">Home</a>
           <a class="nav-link " href="/about.html" title="About Tatiana">About me</a>
-          <a class="nav-link active" href="/cetrtificate.html" title="Certifications">Certifications</a>
+          <a class="nav-link " href="/cetrtificate.html" title="Certifications">Certifications</a>
           <a class="nav-link" href="/works.html" title="Works by Tatiana Mytsianka">My works</a>
-          <a class="nav-link" href="/contact.html" title="Contact me">Contact me</a>
+          <a class="nav-link active" href="/contact.html" title="Contact me">Contact me</a>
         </div>
       </div>
     </div>
