--- a/cetrtificate.html
+++ b/cetrtificate.html
@@ -11,7 +11,7 @@
         <script src="https://kit.fontawesome.com/040b4c5bc1.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
-    <title>My Cetrtificate</title>
+    <title>My Cetrtificate Frontent Developer</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg  bg-light">
@@ -37,10 +37,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <img src="/img/certificatBasic.png" alt="Cetrtificate SheCodes Basics" class="img-fluid rounded shadow-lg mt-3">
+      <img src="/img/certificatBasic.png" alt="Cetrtificate SheCodes Basics" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Basics">
     </div>
     <div class="col-md-6">
-      <img src="/img/certificatePlus.png" alt="Cetrtificate SheCodes Plus" class="img-fluid rounded shadow-lg mt-3">
+      <img src="/img/certificatePlus.png" alt="Cetrtificate SheCodes Plus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Plus">
     </div>
   </div>
 </div>
