--- a/contact.html
+++ b/contact.html
@@ -41,19 +41,19 @@
     <h3>
       Email: 
       <br>
-      <a href="mailto:mytsianka@gmail.com" class="contact-link">mytsianka@gmail.com</a>
+      <a href="mailto:mytsianka@gmail.com" class="contact-link" title="Link to email">mytsianka@gmail.com</a>
     </h3>
     <br>
     <h3> 
       Linkedin:
       <br>
-      <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b" class="contact-link" target="_blank">Tatiana Mytsianka</a>
+      <a href="https://www.linkedin.com/in/tatyana-mytsianka-b5082323b" class="contact-link" target="_blank" title="Link to Linkedin Profile">Tatiana Mytsianka</a>
     </h3>
     <br>
     <h3>
       Instagram:
       <br>
-      <a href="https://www.instagram.com/tasrad/" class="contact-link" target="_blank">@tasrad</a>
+      <a href="https://www.instagram.com/tasrad/" class="contact-link" target="_blank" title="Link to Instagram Profile">@tasrad</a>
     </h3>
   </div>
 
