added certificate Responsive

--- a/cetrtificate.html
+++ b/cetrtificate.html
@@ -43,6 +43,11 @@
       <img src="/img/certificatePlus.png" alt="Cetrtificate SheCodes Plus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Plus">
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-6">
+      <img src="/img/certificateResponsive.png" alt="Cetrtificate SheCodes Responsive" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Responsive">
+    </div>
+  </div>
 </div>
 
 
