changed screen for mabile divaces

--- a/works.html
+++ b/works.html
@@ -42,9 +42,9 @@
     <div class="card-body">
       <h5 class="card-title text-center">Page about Honey</h5>
       <p class="card-text">My first page about things that I love eat😊</p>
-      <h5 class="card-title text-center"> Built with: </h5>
-      <div>
-       <ul>
+      <h5 class="card-title text-center bild-with"> Built with: </h5>
+      <div >
+       <ul class="bild-with">
           <li class="skill">
            HTML
           </li>
@@ -73,9 +73,9 @@
     <div class="card-body">
       <h5 class="card-title text-center">Weather Application</h5>
       <p class="card-text">This was my first project that involved fully-interactive components that pulled data from an API.</p>
-      <h5 class="card-title text-center"> Built with: </h5>
-      <div>
-       <ul>
+      <h5 class="card-title text-center bild-with"> Built with: </h5>
+      <div >
+       <ul class="bild-with">
           <li class="skill">
            HTML
           </li>
@@ -114,15 +114,15 @@
     </div>
   </div>
 
-  <div class="card shadow" style="width: 23rem;">
+  <div class="card shadow" style="width: 22rem;">
     <img src="/img/photo-portfolio2.png" class="card-img-top" alt="Portfolio Site">
     <div class="card-body">
       <h5 class="card-title text-center">Front-end Developer Portfolio</h5>
       <p class="card-text">This is my first fully-responsive project built using Bootstrap. This website is fully accessible on both mobile and desktop viewports.
       </p>
-      <h5 class="card-title text-center"> Built with: </h5>
-      <div>
-       <ul>
+      <h5 class="card-title text-center bild-with"> Built with: </h5>
+      <div >
+       <ul class="bild-with">
         <li class="skill">
           HTML
          </li>
