changed my work page

--- a/works.html
+++ b/works.html
@@ -35,143 +35,146 @@
   
   <h1 class="mt-3">Things I've built recently</h1>
     
-<div class="works">
-
-  <div class="card shadow" style="width: 22rem;">
-    <img src="/img/photo-honey.png" class="card-img-top" alt="Honey Page">
-    <div class="card-body">
-      <h5 class="card-title text-center">Page about Honey</h5>
-      <p class="card-text">My first page about things that I love eat😊</p>
-      <h5 class="card-title text-center bild-with"> Built with: </h5>
-      <div >
-       <ul class="bild-with">
-          <li class="skill">
-           HTML
-          </li>
-          <li class="skill">
-            CSS
-           </li>
-           <li class="skill">
-            Java Script
-           </li>
-           <li class="skill">
-            Visual Studio Code
-           </li>
-        </ul>
-        <div class="icons d-block text-center">
-        <h5 class="card-title text-center">Check it out:</h5>
-        <a href="#" class="live-site" target="_blank" title="Link to site">
-          <i class="fa-solid fa-arrow-up-right-from-square"></i>
-        </a>
-        </div>
+  <div class="container mt-3">
+    <div class="row m-5">
+      <div class="col-md-6 ">
+        <img src="/img/photo-honey.png" class="img-fluid photo-project" alt="Honey Page" width="500">
+      </div>
+      <div class="col-md-6 text-center pt-1">
+        <h5 class="card-title">Page about Honey</h5>
+        <p class="card-text pt-3">My first page about things that I love eat😊</p>
+        <h5 class="card-title  bild-with pt-3"> Built with: </h5>
+        <div >
+          <ul class="bild-with">
+             <li class="skill">
+              HTML
+             </li>
+             <li class="skill">
+               CSS
+              </li>
+              <li class="skill">
+               Java Script
+              </li>
+              <li class="skill">
+               Visual Studio Code
+              </li>
+           </ul>
+           <div class="icons d-block">
+           <h5 class="card-title pt-3">Check it out:</h5>
+           <a href="#" class="live-site" target="_blank" title="Link to site">
+             <i class="fa-solid fa-arrow-up-right-from-square"></i>
+           </a>
+           </div>
+         </div>
       </div>
     </div>
-  </div>
 
-  <div class="card shadow" style="width: 22rem;">
-    <img src="/img/photo-weather-app.png" class="card-img-top" alt="Weather App">
-    <div class="card-body">
-      <h5 class="card-title text-center">Weather Application</h5>
-      <p class="card-text">This was my first project that involved fully-interactive components that pulled data from an API.</p>
-      <h5 class="card-title text-center bild-with"> Built with: </h5>
-      <div >
-       <ul class="bild-with">
-          <li class="skill">
-           HTML
-          </li>
-          <li class="skill">
-            CSS
-           </li>
+    <div class="row m-5">
+      <div class="col-md-6 text-center pt-1">
+        <h5 class="card-title">Weather Application</h5>
+        <p class="card-text pt-3">This was my first project that involved fully-interactive components that pulled data from an API.</p>
+        <h5 class="card-title bild-with pt-3"> Built with: </h5>
+        <div >
+          <ul class="bild-with">
+             <li class="skill">
+              HTML
+             </li>
+             <li class="skill">
+               CSS
+              </li>
+              <li class="skill">
+               Java Script
+              </li>
+              <li class="skill">
+               Visual Studio Code
+              </li>
+              <li class="skill">
+               API
+              </li>
+              <li class="skill">
+                GitHub
+               </li>
+               <li class="skill">
+                Bootstrap
+               </li>
+               <li class="skill">
+                Hosting
+               </li>
+           </ul>
+           <div class="icons d-block">
+             <h5 class="card-title pt-3">Check it out:</h5>
+             <a href="https://graceful-souffle-413359.netlify.app/" class="live-site" target="_blank" title="Link to site">
+               <i class="fa-solid fa-arrow-up-right-from-square"></i>
+             </a>
+             <a href="https://github.com/tasrad/WeatherApp" class="git-hub" target="_blank" title="Link to GitHub">
+               <i class="fa-brands fa-github"></i>
+             </a>
+             </div>
+         </div>
+      </div>
+      <div class="col-md-6 ">
+        <img src="/img/photo-weather-app.png" class="img-fluid photo-project" alt="Weather App">
+      </div>
+    </div>
+
+    <div class="row m-5">
+      <div class="col-md-6 ">
+        <img src="/img/photo-portfolio2.png" class="img-fluid photo-project" alt="Portfolio Site">
+      </div>
+      <div class="col-md-6 text-center pt-1">
+        <h5 class="card-title">Front-end Developer Portfolio</h5>
+        <p class="card-text pt-3">This is my first fully-responsive project built using Bootstrap. This website is fully accessible on both mobile and desktop viewports.
+        </p>
+        <h5 class="card-title bild-with pt-3"> Built with: </h5>
+        <div >
+          <ul class="bild-with">
            <li class="skill">
-            Java Script
-           </li>
-           <li class="skill">
-            Visual Studio Code
-           </li>
-           <li class="skill">
-            API
-           </li>
-           <li class="skill">
-             GitHub
+             HTML
             </li>
             <li class="skill">
-             Bootstrap
-            </li>
-            <li class="skill">
-             Hosting
-            </li>
-        </ul>
-        <div class="icons d-block text-center">
-          <h5 class="card-title text-center">Check it out:</h5>
-          <a href="https://graceful-souffle-413359.netlify.app/" class="live-site" target="_blank" title="Link to site">
-            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-          </a>
-          <a href="https://github.com/tasrad/WeatherApp" class="git-hub" target="_blank" title="Link to GitHub">
-            <i class="fa-brands fa-github"></i>
-          </a>
-          </div>
+              CSS
+             </li>
+             <li class="skill">
+              Java Script
+             </li>
+             <li class="skill">
+              Visual Studio Code
+             </li>
+             <li class="skill">
+              API
+             </li>
+             <li class="skill">
+               GitHub
+              </li>
+              <li class="skill">
+               Bootstrap
+              </li>
+              <li class="skill">
+               Hosting
+              </li>
+             <li class="skill">
+              Flexbox
+             </li>
+             <li class="skill">
+               SEO
+              </li>
+              <li class="skill">
+               Responsive
+              </li>
+           </ul>
+           <div class="icons d-block">
+             <h5 class="card-title pt-3">Check it out:</h5>
+             <a href="https://app.netlify.com/sites/idyllic-croissant-9fc32f/overview" class="live-site" target="_blank" title="Link to site">
+               <i class="fa-solid fa-arrow-up-right-from-square"></i>
+             </a>
+             <a href="https://github.com/tasrad/my-portfolio-pages" class="git-hub" target="_blank" title="Link to GitHub">
+               <i class="fa-brands fa-github"></i>
+             </a>
+             </div>
+         </div>
       </div>
     </div>
   </div>
-
-  <div class="card shadow" style="width: 22rem;">
-    <img src="/img/photo-portfolio2.png" class="card-img-top" alt="Portfolio Site">
-    <div class="card-body">
-      <h5 class="card-title text-center">Front-end Developer Portfolio</h5>
-      <p class="card-text">This is my first fully-responsive project built using Bootstrap. This website is fully accessible on both mobile and desktop viewports.
-      </p>
-      <h5 class="card-title text-center bild-with"> Built with: </h5>
-      <div >
-       <ul class="bild-with">
-        <li class="skill">
-          HTML
-         </li>
-         <li class="skill">
-           CSS
-          </li>
-          <li class="skill">
-           Java Script
-          </li>
-          <li class="skill">
-           Visual Studio Code
-          </li>
-          <li class="skill">
-           API
-          </li>
-          <li class="skill">
-            GitHub
-           </li>
-           <li class="skill">
-            Bootstrap
-           </li>
-           <li class="skill">
-            Hosting
-           </li>
-          <li class="skill">
-           Flexbox
-          </li>
-          <li class="skill">
-            SEO
-           </li>
-           <li class="skill">
-            Responsive
-           </li>
-        </ul>
-        <div class="icons d-block text-center">
-          <h5 class="card-title text-center">Check it out:</h5>
-          <a href="https://app.netlify.com/sites/idyllic-croissant-9fc32f/overview" class="live-site" target="_blank" title="Link to site">
-            <i class="fa-solid fa-arrow-up-right-from-square"></i>
-          </a>
-          <a href="https://github.com/tasrad/my-portfolio-pages" class="git-hub" target="_blank" title="Link to GitHub">
-            <i class="fa-brands fa-github"></i>
-          </a>
-          </div>
-      </div>
-    </div>
-  </div>
-
-</div>
-
 
 
   <footer >
