--- a/works.html
+++ b/works.html
@@ -61,7 +61,7 @@
            </ul>
            <div class="icons d-block">
            <h5 class="card-title pt-3">Check it out:</h5>
-           <a href="#" class="live-site" target="_blank" title="Link to site">
+           <a href="https://cosmic-raindrop-c3e959.netlify.app/" class="live-site" target="_blank" title="Link to site">
              <i class="fa-solid fa-arrow-up-right-from-square"></i>
            </a>
            </div>
