--- a/works.html
+++ b/works.html
@@ -64,6 +64,9 @@
            <a href="https://cosmic-raindrop-c3e959.netlify.app/" class="live-site" target="_blank" title="Link to site">
              <i class="fa-solid fa-arrow-up-right-from-square"></i>
            </a>
+           <a href="https://github.com/tasrad/HoneyPage" class="git-hub" target="_blank" title="Link to GitHub">
+            <i class="fa-brands fa-github"></i>
+          </a>
            </div>
          </div>
       </div>
