--- a/cetrtificate.html
+++ b/cetrtificate.html
@@ -47,6 +47,9 @@
     <div class="col-md-6">
       <img src="/img/certificateResponsive.png" alt="Cetrtificate SheCodes Responsive" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Responsive">
     </div>
+    <div class="col-md-6">
+      <img src="/img/CertificatePrometeus.png" alt="Cetrtificate SheCodes Plus" class="img-fluid rounded shadow-lg mt-3" title="Cetrtificate SheCodes Plus">
+    </div>
   </div>
 </div>
 
